<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    tools:context=".BottomButtons">

    <Button
        android:id="@+id/b_profile"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="Profile"
        android:textSize="10sp" />

    <Button
        android:id="@+id/b_goals"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="Goals"
        android:textSize="10sp" />

    <Button
        android:id="@+id/b_bmi"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="BMI"
        android:textSize="10sp" />

    <Button
        android:id="@+id/b_hikes"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="Hikes"
        android:textSize="10sp" />

    <Button
        android:id="@+id/b_weather"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="Weather"
        android:textSize="10sp" />

    <Button
        android:id="@+id/b_help"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="Help"
        android:textSize="10sp" />
    <!--<ImageButton-->
        <!--android:id="@+id/imageButton"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_weight="1"-->
        <!--tools:src="@tools:sample/avatars" />-->

    <!--<ImageButton-->
        <!--android:id="@+id/imageButton2"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_weight="1"-->
        <!--tools:src="@tools:sample/avatars" />-->

    <!--<ImageButton-->
        <!--android:id="@+id/imageButton3"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_weight="1"-->
        <!--tools:src="@tools:sample/avatars" />-->

    <!--<ImageButton-->
        <!--android:id="@+id/imageButton4"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_weight="1"-->
        <!--tools:src="@tools:sample/avatars" />-->

    <!--<ImageButton-->
        <!--android:id="@+id/imageButton5"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_weight="1"-->
        <!--android:src="@drawable/icon_profile" />-->

</LinearLayout>