<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/frag_rev"
    tools:context=".ReviewFragment">

    <LinearLayout
        android:id="@+id/vll_rev_frag"
        android:layout_width="match_parent"
        android:layout_height="0dp"
...
